--- a/index.css
+++ b/index.css
@@ -261,7 +261,7 @@
 }
 
 .u-section-2 .u-image-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/115b9473f1b4c38d9350badf6743af3f58ec3548f561836df63b06e2312b2293ef9311c0b18982c1354fed879a09b709ace48cb8b8ff500d810c12_1280.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/FreeScene.png");
   background-position: 50% 50%;
   margin-top: 0;
   margin-bottom: 0;
