--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
- .u-section-1 {
+.u-section-1 .u-sheet-1 {
   min-height: 862px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 698px;
+  width: 691px;
   height: 783px;
-  margin: 106px 0 0 auto;
+  margin: 95px 104px 0 auto;
 }
 
 .u-section-1 .u-text-1 {
@@ -18,7 +18,7 @@
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-scale: 1;
   --animation-custom_in-translate_y: 300px;
-  margin: -488px auto 0 calc(((100% - 1140px) / 2) + 72px);
+  margin: -476px auto 0 72px;
 }
 
 .u-section-1 .u-text-2 {
@@ -33,12 +33,12 @@
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
-  margin: 0 calc(((100% - 1140px) / 2) + 570px) 0 calc(((100% - 1140px) / 2) + 72px);
+  margin: 0 750px 0 72px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   width: 498px;
-  margin: 15px auto 60px calc(((100% - 1140px) / 2) + 72px);
+  margin: 15px auto 60px 72px;
 }
 
 .u-section-1 .u-layout-cell-1 {
@@ -88,28 +88,50 @@
   padding: 15px 41px 15px 40px;
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 1399px) {
   .u-section-1 .u-image-1 {
-    width: 601px;
-    height: 695px;
-    margin-top: 167px;
+    margin-top: 123px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-top: -580px;
-    margin-left: calc(((100% - 940px) / 2) + 19px);
+    margin-top: -517px;
+    margin-left: 126px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-right: calc(((100% - 940px) / 2) + 423px);
-    margin-left: calc(((100% - 940px) / 2) + 19px);
+    margin-right: 606px;
+    margin-left: 216px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 27px;
-    margin-left: calc(((100% - 940px) / 2) + 43px);
+    margin-top: 23px;
+    margin-left: 126px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-image-1 {
+    width: 577px;
+    height: 695px;
+    margin-top: 133px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: -441px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-right: 442px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 16px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-btn-1 {
@@ -118,18 +140,18 @@
 }
 
 @media (max-width: 991px) {
-   .u-section-1 {
-    min-height: 884px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 964px;
   }
 
   .u-section-1 .u-image-1 {
     height: 694px;
-    margin-top: 71px;
+    margin-top: 77px;
     margin-right: auto;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -214px;
+    margin-top: -163px;
     margin-left: auto;
   }
 
@@ -137,12 +159,13 @@
     font-weight: 300;
     line-height: 1.4;
     letter-spacing: 0px;
-    margin-left: 82px;
-    margin-right: 82px;
+    width: 498px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 11px;
+    margin-top: 18px;
     margin-left: auto;
   }
 
@@ -165,35 +188,39 @@
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 11px;
+    margin-left: auto;
     margin-right: auto;
     padding: 13px 31px 13px 30px;
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-1 {
-    min-height: 914px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 882px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 540px;
-    height: 624px;
-    margin-top: 162px;
+    height: 651px;
+    margin-top: 153px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3.4375rem;
-    margin-top: -221px;
+    margin-top: -198px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 50px;
-    margin-right: 50px;
+    width: auto;
+    margin-left: 21px;
+    margin-right: 21px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 0;
+    margin-top: 8px;
+    margin-bottom: 52px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -211,33 +238,39 @@
 }
 
 @media (max-width: 575px) {
-   .u-section-1 {
-    min-height: 768px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 707px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 535px;
-    margin-top: 173px;
+    height: 621px;
+    object-position: 58.09% 44.74%;
+    margin-top: 17px;
+    width: auto;
     margin-right: initial;
     margin-left: initial;
-    width: auto;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3rem;
-    margin-top: -204px;
+    margin-top: -216px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-2 {
-    width: 340px;
     font-size: 1.5rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 5px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    width: 340px;
-    margin-bottom: 46px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -251,18 +284,15 @@
 
   .u-section-1 .u-btn-2 {
     font-size: 0.625rem;
-    margin-top: 0;
-    margin-left: auto;
   }
 } .u-section-2 {
   background-image: none;
-  min-height: 613px;
+  min-height: 478px;
 }
 
 .u-section-2 .u-slider-1 {
-  min-height: 613px;
-  margin-top: 0;
-  margin-bottom: 0;
+  min-height: 478px;
+  margin: 0 auto;
 }
 
 .u-section-2 .u-carousel-indicators-1 {
@@ -275,8 +305,6 @@
 .u-section-2 .u-image-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/FreeScene.png");
   background-position: 50% 50%;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -305,8 +333,6 @@
 .u-section-2 .u-image-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/2394d1b9aa11ee2ddda2608a67afeb6fdaedc09be584dca415c922731df85ae69a02a08f186293137a879fd09f8e442bbe394778e9d0412548e061_1280.jpg");
   background-position: 50% 50%;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -333,36 +359,65 @@
 }
 
 .u-section-2 .u-carousel-control-1 {
-  width: 53px;
-  height: 53px;
-  left: 30px;
+  width: 38px;
+  height: 38px;
+  left: -58px;
   position: absolute;
   right: auto;
 }
 
 .u-section-2 .u-carousel-control-2 {
-  width: 53px;
-  height: 53px;
+  width: 38px;
+  height: 38px;
   left: auto;
   position: absolute;
-  right: 30px;
+  right: -58px;
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 1399px) {
+   .u-section-2 {
+    min-height: 613px;
+  }
+
   .u-section-2 .u-slider-1 {
+    min-height: 613px;
     height: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-image-1 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    width: 53px;
+    height: 53px;
+    left: 30px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    width: 53px;
+    height: 53px;
+    right: 30px;
   }
 }
 
 @media (max-width: 991px) {
    .u-section-2 {
-    min-height: 531px;
+    min-height: 530px;
   }
 
   .u-section-2 .u-slider-1 {
     min-height: 530px;
-    margin-top: 1px;
-    margin-bottom: 1px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -378,11 +433,13 @@
 
 @media (max-width: 767px) {
    .u-section-2 {
-    min-height: 411px;
+    min-height: 412px;
   }
 
   .u-section-2 .u-slider-1 {
     min-height: 410px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -397,6 +454,12 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-slider-1 {
+    min-height: 412px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-2 .u-text-2 {
     width: 320px;
   }
